# kmax-domset

./: LICENSE  README.md  algo.py  pyproject.toml  test_algo.py
kmax_domset/: __init__.py  algorithm.py
kmax_domset.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
